fixed buttons and footer spacing

--- a/styles/components.css
+++ b/styles/components.css
@@ -1,6 +1,28 @@
 
 /* buttons and icons and smaller reusable bits here */
 
+	button {
+		max-width: 150px;
+
+		  background-color: var(--secondary-color);
+		  border-radius: 4px;
+		  border-style: none;
+		  color: var(--ink);
+		  cursor: pointer;
+		  padding: 9px 20px 8px;
+		  position: relative;
+		  width: 100%;
+		}
+
+	button:hover,
+	button:focus {
+	  opacity: .75;
+	}
+
+	}
+
+
+
 
 .glide__arrow{
 	background-color: var(--paper) !important;
